--- a/content.html
+++ b/content.html
@@ -122,49 +122,46 @@
                         In Magister kunnen alleen docenten cijfers invoeren, terwijl leerlingen ze alleen kunnen bekijken. 
                         Dit komt omdat docenten meer rechten hebben dan leerlingen. Magister controleert dus de toegang en 
                         <a href="glossary.html#digitale-veiligheid">rechten</a> van een gebruiker, die gekoppeld zijn aan hun 
-                        <a href="glossary.html#digitale-veiligheid">rol</a>. Docenten hebben meer rechten dan leerlingen, en beheerders 
-                        hebben de meeste rechten. Toegangscontrole valt onder vertrouwelijkheid, terwijl de controle van 
+                        <a href="glossary.html#digitale-veiligheid">rol</a>. Docenten hebben meer rechten dan leerlingen, en 
+                        beheerders hebben de meeste rechten. Toegangscontrole valt onder vertrouwelijkheid, terwijl de controle van 
                         rechten <a href="glossary.html#digitale-veiligheid">autorisatie</a> of integriteitscontrole wordt genoemd.
                     </p>
 
                     <p>
                         Er zijn eisen die aan informatie gesteld worden, namelijk: volledigheid, relevantie, betrouwbaarheid, 
-                        overzichtelijkheid, beschikbaarheid, doelgerichtheid. Integriteit van gegevens betekent dat de 
-                        kwaliteit voldoet aan alle eisen en alleen verwerkt wordt door geautoriseerde gebruikers. Zoals bij 
-                        Magister, waar het instellen van gebruikersrechten zorgt voor juiste informatie, en dus is er sprake van 
-                        integriteit.
+                        overzichtelijkheid, beschikbaarheid, doelgerichtheid. Integriteit van gegevens betekent dat de kwaliteit 
+                        voldoet aan alle eisen en alleen verwerkt wordt door geautoriseerde gebruikers. Zoals bij Magister, waar het 
+                        instellen van gebruikersrechten zorgt voor juiste informatie, en dus is er sprake van integriteit.
                     </p>
 
                     <p>
                         Integriteit heeft nog meer betekenissen dan de genoemde. Integriteit in computernetwerken betekent dat 
-                        bepaalde schijven of mappen alleen toegankelijk zijn voor specifieke rollen. Bijvoorbeeld, de 
-                        schoolleiding kan een aparte netwerkschijf hebben voor het delen van bestanden, of als 
-                        informatica-leerling heb je toegang tot bestanden die niet toegankelijk zijn voor andere leerlingen. 
-                        Toegang wordt verleend via autorisatie, niet door apart in te loggen, en kan worden ingesteld door de 
-                        systeembeheerder via bestandsrechten (Engels: <i>file permissions</i>).
+                        bepaalde schijven of mappen alleen toegankelijk zijn voor specifieke rollen. Bijvoorbeeld, de schoolleiding 
+                        kan een aparte netwerkschijf hebben voor het delen van bestanden, of als informatica-leerling heb je toegang 
+                        tot bestanden die niet toegankelijk zijn voor andere leerlingen. Toegang wordt verleend via autorisatie, niet 
+                        door apart in te loggen, en kan worden ingesteld door de systeembeheerder via bestandsrechten 
+                        (Engels: <i>file permissions</i>).
                     </p>
 
                     <p>
-                        Een andere manier om de integriteit van je data te garanderen, is door het maken van backups. 
-                        In geval van onvoorziene problemen, kun je altijd terugkeren naar een eerdere staat waarin de 
-                        data integer was.
+                        Een andere manier om de integriteit van je data te garanderen, is door het maken van backups. In geval van 
+                        onvoorziene problemen, kun je altijd terugkeren naar een eerdere staat waarin de data integer was.
                     </p>
 
                     <!-- Checksums en IBANs -->
                     <p>
-                        Bij het delen van een bestand, zoals via internet of USB, kan de ontvanger de integriteit controleren 
-                        met een <a href="glossary.html#digitale-veiligheid">checksum</a>, een soort vingerafdruk van het bestand. Als 
-                        de checksums overeenkomen, is het bestand exact hetzelfde als het origineel. Dit wordt vaak gebruikt 
-                        bij het downloaden van installatiebestanden.
+                        Bij het delen van een bestand, zoals via internet of USB, kan de ontvanger de integriteit controleren met een 
+                        <a href="glossary.html#digitale-veiligheid">checksum</a>, een soort vingerafdruk van het bestand. Als de 
+                        checksums overeenkomen, is het bestand exact hetzelfde als het origineel. Dit wordt vaak gebruikt bij het 
+                        downloaden van installatiebestanden.
                     </p>
 
                     <p>
-                        Als je geld over maakt, wil je geen fouten maken bij het invoeren van rekeningnummer (IBAN). IBAN's 
-                        lijken erg op checksums en bevatten een controlegetal om typfouten te voorkomen. Dit systeem werkt 
-                        door de eerste vier karakters naar het einde van het IBAN te verplaatsen, letters te vervangen door 
-                        cijfers (A = 10, B = 11, enz.), en het getal modulo 97 te berekenen. Een restwaarde van 1 duidt op 
-                        een geldig IBAN. Dit helpt om zeker te zijn dat je een correct IBAN hebt overgenomen, maar dit zegt 
-                        niets over de 'eigenaar' van het IBAN.
+                        Als je geld over maakt, wil je geen fouten maken bij het invoeren van rekeningnummer (IBAN). IBAN's lijken 
+                        erg op checksums en bevatten een controlegetal om typfouten te voorkomen. Dit systeem werkt door de eerste 
+                        vier karakters naar het einde van het IBAN te verplaatsen, letters te vervangen door cijfers (A = 10, B = 11, 
+                        enz.), en het getal modulo 97 te berekenen. Een restwaarde van 1 duidt op een geldig IBAN. Dit helpt om zeker 
+                        te zijn dat je een correct IBAN hebt overgenomen, maar dit zegt niets over de 'eigenaar' van het IBAN.
                     </p>
 
                     <!-- H1.4 -->
@@ -179,11 +176,10 @@
                     </p>
 
                     <p>
-                        Als data onverwacht onbeschikbaar wordt, is een back-up essentieel. Dit kan via clouddiensten zoals 
-                        OneDrive, Google Drive of iCloud Drive, of fysiek via een USB-stick of externe harde schijf. Het is 
-                        belangrijk om fysieke back-ups op een andere locatie te bewaren dan de originele data om verlies door 
-                        onvoorspelbare rampen zoals brand te voorkomen. Idealiter wordt een back-up op een andere fysieke locatie 
-                        bewaard.
+                        Als data onverwacht onbeschikbaar wordt, is een back-up essentieel. Dit kan via clouddiensten zoals OneDrive, 
+                        Google Drive of iCloud Drive, of fysiek via een USB-stick of externe harde schijf. Het is belangrijk om 
+                        fysieke back-ups op een andere locatie te bewaren dan de originele data om verlies door onvoorspelbare rampen 
+                        zoals brand te voorkomen. Idealiter wordt een back-up op een andere fysieke locatie bewaard.
                     </p>
 
                     <p>
