--- a/about-us.html
+++ b/about-us.html
@@ -185,14 +185,14 @@
                                 <a href="content.html">Begrippen Fundament Security</a>
                             </li>
                             <li>
-                                <a href="simulation.html">???</a>
+                                <a href="simulation.html">Responsive design</a>
                             </li>
                         </ol>
                     </div>
                 </article>
 
                 <footer>
-                    <p>Deze website is gemaakt door Xingqi Zhao en Matthijs Rodts | Stanislascollege Westplantsoen</p>
+                    <p>Deze website is gemaakt door Xingqi Z. en Matthijs Rodts | Stanislascollege Westplantsoen</p>
                 </footer>
             </main>
         </div>
