--- a/glossary.html
+++ b/glossary.html
@@ -260,7 +260,7 @@
                 </article>
 
                 <footer>
-                    <p>Deze website is gemaakt door Xingqi Zhao en Matthijs Rodts | Stanislascollege Westplantsoen</p>
+                    <p>Deze website is gemaakt door Xingqi Z. en Matthijs Rodts | Stanislascollege Westplantsoen</p>
                 </footer>
             </main>
         </div>
