--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
                         en vaardigheden van HTML en CSS voor het bouwen van een website op de proef. 
                         Hopelijk kan deze website kennis over digitale veiligheid aanbieden.
                     </p>
+
+                    <p>
+                        In paragraaf 1 wordt er tijd besteed aan de verschillende aspecten van digitale 
+                        veiligheid. Paragraaf 2 gaat over verschillende vormen van bedreigingen. 
+                        Paragraaf 3 gaat over aanvallers en verdedigers. Tenslotte zal paragraaf 4 
+                        aandacht besteden aan allerlei maatregelen. Paragraaf 5 is verdieping, dus er 
+                        is besloten dat weg te laten.
+                    </p>
                 </article>
 
                 <footer>
