flex: 1; i.p.v. slechte percentages

--- a/about-us.html
+++ b/about-us.html
@@ -34,7 +34,7 @@
                 <p>Op deze pagina</p>
 
                 <ul>
-                    <li><a href="#achtergrond">Achtergrond</a></li>
+                    <li><a href="#aanleiding">Aanleiding</a></li>
                     <li><a href="#ontwikkeling">Ontwikkeling</a></li>
                     <li><a href="#functies">Functies</a></li>
                 </ul>
@@ -47,7 +47,7 @@
                     </header>
                 </article>
 
-                <article id="achtergrond">
+                <article id="aanleiding">
                     <h2>Aanleiding</h2>
     
                     <p>
@@ -68,7 +68,7 @@
                         waardoor de website heen ging; van ontwerp tot eindversie.
                     </p>
 
-                    <div class="photos three-img"> <!-- Hier is gekozen om flexbox te gebruiken in plaats van float voor de flexibiliteit -->
+                    <div class="photos"> <!-- Hier is gekozen om flexbox te gebruiken in plaats van float voor de flexibiliteit -->
                         <div>
                             <a target="_blank" href="attachments/design-v1.png">
                                 <img src="attachments/design-v1.png" alt="Design v1 homepagina">
@@ -97,7 +97,7 @@
                         plaats van een geheime knop. De sitemap ziet er als volgt uit:
                     </p>
 
-                    <div class="photos two-img">
+                    <div class="photos">
                         <div>
                             <a target="_blank" href="attachments/design-v1-sitemap.png">
                                 <img src="attachments/design-v1-sitemap.png" alt="Design v1 sitemap">
@@ -119,7 +119,7 @@
                         uitgebreid naar 9 verschillende kleuren.
                     </p>
 
-                    <div class="photos two-img">
+                    <div class="photos">
                         <div>
                             <a target="_blank" href="attachments/kleuren-v1.png">
                                 <img src="attachments/kleuren-v1.png" alt="Kleurenstaal v1">
@@ -141,7 +141,7 @@
                         de website.
                     </p>
 
-                    <div class="photos three-img">
+                    <div class="photos">
                         <div>
                             <a target="_blank" href="attachments/Schem-tek-home.png">
                                 <img src="attachments/Schem-tek-home.png" alt="Schematische tekenening homepagina">
