--- a/about-us.html
+++ b/about-us.html
@@ -12,20 +12,35 @@
     <nav>
         <div class="wrapper">
             <div class="left">
+                <div id="phone-nav">
+                    <input type="checkbox" id="menu" name="menu">
+                    <label for="menu">Menu</label>
+                    <div class="dropdown menu">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="content.html">Inhoud</a></li>
+                            <li><a href="glossary.html">Begrippen</a></li>
+                            <li><a href="about-us.html" class="current">Over ons</a></li>
+                            <li><a href="simulation.html">Simulatie</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <a href="index.html" title="Home">Security</a>
             </div>
+
             <div class="center">
                 <div>
                     <a href="content.html">Inhoud</a>
                     <a href="glossary.html">Begrippen</a>                    
                 </div>
                 <div>
-                    <a href="about-us.html" id="current">Over ons</a>
+                    <a href="about-us.html" class="current">Over ons</a>
                     <a href="simulation.html">Simulatie</a>
                 </div>
             </div>
         </div>
     </nav>
+
     <div id="container">
         <div class="left background"></div>
 
