--- a/content.html
+++ b/content.html
@@ -12,12 +12,25 @@
     <nav>
         <div class="wrapper">
             <div class="left">
+                <div id="phone-nav">
+                    <input type="checkbox" id="menu" name="menu">
+                    <label for="menu">Menu</label>
+                    <div class="dropdown menu">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="content.html" class="current">Inhoud</a></li>
+                            <li><a href="glossary.html">Begrippen</a></li>
+                            <li><a href="about-us.html">Over ons</a></li>
+                            <li><a href="simulation.html">Simulatie</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <a href="index.html" title="Home">Security</a>
             </div>
 
             <div class="center">
                 <div>
-                    <a href="content.html" id="current">Inhoud</a>
+                    <a href="content.html" class="current">Inhoud</a>
                     <a href="glossary.html">Begrippen</a>                    
                 </div>
                 <div>
