--- a/index.html
+++ b/index.html
@@ -12,8 +12,22 @@
     <nav>
         <div class="wrapper">
             <div class="left">
+                <div id="phone-nav">
+                    <input type="checkbox" id="menu" name="menu">
+                    <label for="menu">Menu</label>
+                    <div class="dropdown menu">
+                        <ul>
+                            <li><a href="index.html" class="current">Home</a></li>
+                            <li><a href="content.html">Inhoud</a></li>
+                            <li><a href="glossary.html">Begrippen</a></li>
+                            <li><a href="about-us.html">Over ons</a></li>
+                            <li><a href="simulation.html">Simulatie</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <a href="index.html" title="Home">Security</a>
             </div>
+
             <div class="center">
                 <div>
                     <a href="content.html">Inhoud</a>
