--- a/about-us.html
+++ b/about-us.html
@@ -213,6 +213,9 @@
                             <li>
                                 Flexbox voor layout
                             </li>
+                            <li>
+                                Links naar paragrafen met een vloeiende beweging
+                            </li>
                         </ol>
                     </div>
                 </article>
