--- a/about-us.html
+++ b/about-us.html
@@ -216,6 +216,9 @@
                             <li>
                                 Links naar paragrafen met een vloeiende beweging
                             </li>
+                            <li>
+                                Dropdown menu voor telefoons
+                            </li>
                         </ol>
                     </div>
                 </article>
